# CPE466-KDD

./: .gitignore  p2p-Gnutella05_mic_off.out  wiki-Vote_mic_off.out
ParallelPageRank/: CMakeLists.txt  README.md  data.txt  prototype.m  reformat.py  report.cls  report.tex  tacos.m  unformat.py
ParallelPageRank/data/: soc-sign-Slashdot081106.txt
ParallelPageRank/src/: .gitignore  CMakeLists.txt  Makefile  create_adjacency_list.h  d0_85_live_journal_matches_lab3_head78.out  dump_adjacency_list.h  getRank-offload.c  getRank.c  getRank.h  hashtable.c  hashtable.h  mv.sh  offload-ranker.c  offload.h  ranker.c  read_options.h
ParallelPageRank/src/cuda/: Makefile  benchmark.h  create_adjacency_list.h  getRank.cu  hashtable.h  pageRank  ranker.cu
ParallelPageRank/src/cuda/cuda/: create_adjacency_list.h  getRank.cu  getRank.h  ranker.cu  read_options.h
ParallelPageRank/tests/: CMakeLists.txt  hashtable_test.ts
lab1/: .gitignore  README.md
lab1/csvhandler/: csvhandler.py  test.csv  test_csvhandler.py
lab1/text/: test.txt  test_texthandler.py  (+1 more)
lab2/: README.md  convert_info_results.rb  convert_results.rb  document.py  report.tex  setup.py  test_matcher.py  test_matching.py  test_parser.py  text  vector
lab3/: .gitignore  NCAA_football-results.tex  README.md  Rakefile  amazon0505-results.tex  build_page_rank.py  datasets  dolphins-results.tex  graphdata.csv  karate-results.tex  lesmis-results.tex  p2p-Gnutella05-results.tex  page_rank.c  page_rank.h  pagerank.py  performance.R  performance.csv  polblogs-results.tex  ranker_test.py  report.cls  report.tex  setup.py  soc-LiveJournal1-results.tex  soc-sign-Slashdot081106-results.tex  stateborders-results.tex  test_page_rank.py  testdiff.sh  vector  wiki-Vote-results.tex
lab4/: README.md  c45.py  c45_test.py  datalist  dataset.py  evaluate-output.txt  model.py  sampling.py  setup.py  test_c45.py  test_dataset.py  test_model.py  test_sampling.py
lab5/: README.md  formatter.py  graph.R  hierarchical.py  hierarchical_clusterer.py  kmeans.py  kmeans_clusterer.py  setup.py  test_cluster.py
lab6/: README.md  Rakefile  apriori.py  goods.csv  report.md  setup.py
project/: convert.rb  graph-cluster-variables.R  graph.R  read-dataset.R  setup.py
(+143 files in other folders)
